@@ -1,3 +1,10 @@
+Thu Jul  3 11:46:23 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/ProjectCreator.pm:
+
+          Fixed an issue where a chain of three or more Custom_Define's
+          would not have the right default input/output.
+
 Wed Jul  2 16:35:22 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/CommandHelper.pm:
